fix align text in stats

--- a/packages/scanner/src/components/scan-screen-stats/main-screen-stats.module.css
+++ b/packages/scanner/src/components/scan-screen-stats/main-screen-stats.module.css
@@ -1,6 +1,7 @@
 .mainScreenStats {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2px;
 
     font-weight: 400;
